[project]
name = "subtitle-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "assemblyai>=0.43.1",
    "dotenv>=0.9.9",
    "elevenlabs>=1.57.0",
    "pathlib>=1.0.1",
    "questionary>=2.1.0",
    "yt-dlp>=2025.9.5",
]
